# CodingPractice

./: CMakeLists.txt
Renming/Week1/: code1.py  code2.py  code3.py  code4.py  code5.py  code6.py  code6_2.py  code7.py  test.py  time_renming
Renming/Week2/: CMakeLists.txt  code1.cpp  code2.cpp  code3.cpp  code4.cpp  code5.cpp  code6_advanced.cpp  code6_naive.cpp  code7_naive.cpp  code8_naive.cpp  input.txt  output.txt  playground.cpp  time.txt
